--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React18 + Ts5 + webpack5 开发模板搭建</title>
+    <title>芸辉光电科技有限公司</title>
   </head>
   <body>
     <div id="root"></div>
